--- a/.env
+++ b/.env
@@ -1,3 +1,8 @@
 PORT=3000
-MONGO_URI=mongodb+srv://matias:Matias123@cursonodejs.oabpw.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
+#MONGO_URI=mongodb+srv://matias:Matias123@cursonodejs.oabpw.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
+
+MONGO_URI=mongodb+srv://$MONGO_USERNAME:$MONGO_PASSWORD@cursonodejs.oabpw.mongodb.net/$MONGO_DBNAME?retryWrites=true&w=majority
+
 MONGO_DBNAME=cursonodejs
+MONGO_USERNAME=curso
+MONGO_PASSWORD=DSvmB5JNmN5R3xHT
