--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "debug": "^4.3.3",
     "dotenv": "^14.2.0",
+    "dotenv-expand": "^6.0.1",
     "excel4node": "^1.7.2",
     "express": "^4.17.2",
     "http-errors": "^2.0.0",
